

History
=======

Version: 0.5.0 - Date: ????-??-??
---------------------------------

Major enhancements:

 * Issue #73 impose a delay before replying for invalid credentials to minimize
   the risk of brute force password guessing.

 * Issue #72: pyftpdlib now provides configurable idle timeouts to disconnect
   client after a long time of inactivity.

Bugfixes:

 * Issue #71: socket handles are leaked when a data transfer is in progress and
   user QUITs.


Version: 0.4.0 - Date: 2008-05-16
---------------------------------

Major enhancements:

 * Issue #65: assume the id of real users when using system dependent
   authorizers.
 * Issue #67: added IPv6 support.

Bugfixes:

 * Issue #64: issue when authenticating as anonymous user using user-defined
   authorizers.
 * Issue #66: WinNTAuthorizer does not determine the real user home directory.
 * Issue #69: DummyAuthorizer incorrectly uses class attribute instead of
   instance attribute for user_table dictionary.
 * Issue #70: wrong NOOP response code.

API changes since 0.3.0:

 * DummyAuthorizer class changes:
      * impersonate_user() and terminate_impersonation() methods have been
        added.


Version: 0.3.0 - Date: 2008-01-17
---------------------------------

Major enhancements:

 * Issue #48: real permissions, owner, and group for files on UNIX platforms are
   now provided when processing LIST.
 * Issue #51: added the new demo/throttled_ftpd.py script.
 * Issue #59: iterators are now used for calculating requests requiring long
   time to complete (LIST and MLSD commands).
 * Issue #61: extended the set of assignable user permissions.

RFC-related enhancements:

 * Issue #42: implemented FEAT command defined in RFC-2389.
 * Issue #52: implemented MLST and MLSD commands defined in RFC-3659.
 * Issue #58: implemented OPTS command define in RFC-2389.

Bugfixes:

 * Issue #41: error occurred on quit if user was not yet authenticated.